# sales-agent-showcase

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: sample-output.txt
examples/: inventory.sample.json
scripts/: scan.sh
src/sales_showcase/: __init__.py  ledger.py  listing.py  marketplace.py  models.py  orchestrator.py
tests/: test_ledger.py  test_listing.py  test_orchestrator.py
